    beta1:
    - all the disk processing algorithms were reimplemented
      to reach better efficiency and shorter processing times
    - FAT optimization was implemented
    - ability to filter out files by size of their fragments was added
      (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
      environment variable in command line tool and boot time interface)
    - MFT optimization was forced to do nothing silently on non-NTFS disks


  Version 5.0.0  2011-12-31
  ------------------------------------------------------------------------------
    - the following translations were added:

      Kapampangan, Georgian

    - the following translations were updated:

      Italian, Polish, Swedish, Burmese (Padauk), Finnish, Japanese

    RC2:
    - ability to defragment NTFS attribute lists was added
    - check for the volume dirty flag was added to the volume analysis
    - ability to select all disks by pressing Ctrl+A was added to GUI
    - ability to analyze disk by pressing Enter or double-clicking on
      the list row was added to GUI
    - the following translations were updated:

      Japanese, Korean, Italian, Iloko, Czech, Slovak, Portuguese (BR),
      Romanian, Filipino (Tagalog), Catalan, Spanish (ES), Hungarian,
      Farsi, Yiddish

    - installer has been enhanced in the following ways:
      + usage tracking can be enabled/disabled
        during silent installations using the /S switch:
            * /DISABLE_USAGE_TRACKING ... enable/disable usage tracking
                                          through the web
    - added command script to create translation report as text/plain
      and text/wiki
    - few little bugs in volume processing routines were fixed
    - volume letter being processed was added to GUI title
    - a header was added to 'udefrag -l' command output
    - Internals: coding style changed: tabs replaced by four spaces
    - is_dirty flag added to winx_volume_information (zenwinx.h)